fix: wrap long lines in codeblock

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -99,6 +99,8 @@ hr {
 .prose pre {
   font-family: monospace;
   color: var(--color-theme-100);
+  white-space: pre-wrap;
+  word-break: break-all;
 }
 
 .prose hr {
